<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado2"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".RegisterActivity" >

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="50dip"
        android:gravity="center"
        android:text="@string/btRegistrar"
        android:textColor="@color/letraAzul1"
        android:textSize="@dimen/tamanoletra" /> <!-- android:background="@color/colorbtRegistrar" -->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dip"
        android:layout_marginTop="22dp"
        android:text="@string/tvNombre"
        android:textColor="@color/letraAzul1"
        android:textAppearance="?android:attr/textAppearanceLarge"/>  <!-- android:textSize="@dimen/tamanoletra"  -->

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtEmail"
        android:layout_centerHorizontal="true"
        android:text="@string/tvEmail"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_margin="15dip" 
        android:textColor="@color/letraAzul1" /> <!-- android:textSize="@dimen/tamanoletra"  -->

    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView2"
        android:layout_margin="15dip"
        android:ems="10"
        android:hint="@string/hintNombre"
        android:textColor="@color/letraAzul1"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="15dip"
        android:ems="10"
        android:hint="@string/hintEmail"
        android:textColor="@color/letraAzul1"
        android:inputType="textEmailAddress|textAutoComplete" />



</RelativeLayout>